# shopped-rs

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: rust.yml
.sqlx/: query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-99923780836b5e8b37aa9c3652beedc3514dc768cb3324f1120d10507a6228c0.json  query-9ea6f2537086997263e05720599ed155c910973f52e618d4613cc6ad753b1479.json  query-d9446ab81a14f6a4229006f4a3301a604ec2930078d69405b62e96d078be115d.json
migrations/: 20241005165924_init.sql  20241009025538_products.sql
src/: config.rs  main.rs
src/api/: mod.rs  users.rs
src/db/: mod.rs  models.rs  postgres.rs
