[package]
name = "shopped_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
sqlformat = "=0.2.6"
anyhow = "1"
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.19"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6.1", features = ["cors"] }
clap = { version = "4", default-features = false, features = [
    "derive",
    "std",
    "env",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }
